added more icons to navbar

--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@
              </a>
              <div class="nav-collapse collapse">
                <ul class="nav">
-                 <li class="active"><a href="#">Home</a></li>
-                 <li><a href="#about">About</a></li>
+                 <li class="active"><a href="#">
+                   <i class="icon-home"> </i>Home
+                 </a></li>
+                 <li><a href="http://ramnathv.github.io/rCharts">
+                   <i class="icon-leaf"> </i> Quick Start
+                 </a></li>
                  <li><a href="http://rcharts.github.io/gallery">
                    <i class="icon-signal"> </i> Gallery
                  </a></li>
