add link in view detail

--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
                   <p>
                </div>
                <div class="card-actions">
-                  <button class="btn btn-block">View Details</button>
+                <button class="btn btn-block" 
+                  href="http://ramnathv.github.io/rCharts">
+                  View Details
+                </button>
                </div>
             </div>
 
