modify title and add favicon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Bootplus</title>
+      <title>rCharts</title>
       <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +15,7 @@
       <!-- <link href="../assets/css/font-awesome.min.css" rel="stylesheet"> -->
       <link href="https://rawgithub.com/aozora/bootplus/gh-pages/assets/css/bootplus.css" rel="stylesheet">
       <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.css" rel="stylesheet">
+      <link rel="icon" type="image/png" href="img/slidify_logo_notext.png">
       <style type="text/css">
       body {
         padding-top: 10px;
