add link to learn more

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
                </h1>
                <p>is an R package to create, customize and publish interactive javascript visualizations from R using a familiar 
                  lattice style plotting interface.</p>
-               <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+               <p><a href="http://ramnathv.github.io/rCharts" 
+                 class="btn btn-primary btn-large">Learn more &raquo;</a></p>
              </div>
              <div class='span6'>
                <div id="myCarousel" class="carousel slide">
