--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
              <a class="brand" href="#">
                rCharts
              </a>
+             <iframe class="pull-right" style="margin-top:10px;" src="http://ghbtns.com/github-btn.html?user=ramnathv&repo=rCharts&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
+            <iframe class="pull-right" style="margin-top:10px;" src="http://ghbtns.com/github-btn.html?user=ramnathv&repo=rCharts&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
              <div class="nav-collapse collapse">
                <ul class="nav">
                  <li class="active"><a href="#">
