--- a/playground/index.html
+++ b/playground/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title>OpenCPU rCharts App - jsFiddle demo by ramnathv</title>
+  <title>Try rCharts Online!</title>
       <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
       <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular.min.js"></script>
       <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -38,7 +37,7 @@ p {
   <div class='container' ng-controller='MainCtrl'>
   <div class='row' id='main'>
      <div class='col-lg-12'>
-      <h3>rCharts OpenCPU App</h3>
+      <h3>Try rCharts Online</h3>
     <p id='author' class='text-muted'>by <a href='http://github.com/ramnathv'>Ramnath Vaidyanathan</a>, Dec 17, 2013</p>
     <p>
       <span class='label label-default'>OpenCPU</span>
