--- a/playground/index.html
+++ b/playground/index.html
@@ -46,8 +46,8 @@ p {
     </p>
          <div class='alert alert-success'>
              <button class="close" data-dismiss="alert" href="#" aria-hidden="true">&times;</button>
-         <p>This is an interactive playground to try <a href='http://rcharts.io'>rCharts</a> online. You can select different examples, which are dynamically retrieved from gists. You can modify the code, or type in your own before hitting the submit button to render the chart.</p>
-<p>This application uses <a href='http://opencpu.org'>OpenCPU</a> to call R and <a href='http://angularjs.org'>AngularJS</a>AngularJS for reactive bindings.</p>
+         <p>This is an interactive playground to try <a href='http://rcharts.io'>rCharts</a> online. You can select different examples, play with the code, or even type in your own before hitting the submit button to render the chart.
+This application uses <a href='http://opencpu.org'>OpenCPU</a> to call R and <a href='http://angularjs.org'>AngularJS</a>AngularJS for reactive bindings.</p>
          </div>
       </div>
     </div>
