--- a/playground/index.html
+++ b/playground/index.html
@@ -47,7 +47,7 @@ p {
          <div class='alert alert-success'>
              <button class="close" data-dismiss="alert" href="#" aria-hidden="true">&times;</button>
          <p>This is an interactive playground to try <a href='http://rcharts.io'>rCharts</a> online. You can select different examples, play with the code, or even type in your own before hitting the submit button to render the chart.
-This application uses <a href='http://opencpu.org'>OpenCPU</a> to call R and <a href='http://angularjs.org'>AngularJS</a>AngularJS for reactive bindings.</p>
+This application uses <a href='http://opencpu.org'>OpenCPU</a> to call R and <a href='http://angularjs.org'>AngularJS</a> for reactive bindings.</p>
          </div>
       </div>
     </div>
