--- a/playground/index.html
+++ b/playground/index.html
@@ -38,7 +38,6 @@ p {
   <div class='row' id='main'>
      <div class='col-lg-12'>
       <h3>Try rCharts Online</h3>
-    <p id='author' class='text-muted'>by <a href='http://github.com/ramnathv'>Ramnath Vaidyanathan</a>, Dec 17, 2013</p>
     <p>
       <span class='label label-default'>OpenCPU</span>
       <span class='label label-success'>AngularJS</span>
@@ -47,7 +46,7 @@ p {
          <div class='alert alert-success'>
              <button class="close" data-dismiss="alert" href="#" aria-hidden="true">&times;</button>
          <p>This is an interactive playground to try <a href='http://rcharts.io'>rCharts</a> online. You can select different examples, play with the code, or even type in your own before hitting the submit button to render the chart.
-This application uses <a href='http://opencpu.org'>OpenCPU</a> to call R and <a href='http://angularjs.org'>AngularJS</a> for reactive bindings.</p>
+This application uses <a href='http://opencpu.org'>OpenCPU</a> to call R, AngularJS</a> for reactive bindings and the  the <a href='ace.c9.io'>Ace Editor</a> along with the <a href='http://angular-ui.github.io/ui-ace/'>Angular Ace module</a>for editing code<a href='http://angularjs.org'>.</p>
          </div>
       </div>
     </div>
