update link to ace editor.

--- a/playground/index.html
+++ b/playground/index.html
@@ -7,7 +7,7 @@
       <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular.min.js"></script>
       <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
       <script type='text/javascript' src="https://public.opencpu.org/js/archive/opencpu-0.4.js"></script>
-      <script type='text/javascript' src="https://rawgithub.com/ajaxorg/ace-builds/v1.1.1/src-min-noconflict/ace.js"></script>
+      <script type='text/javascript' src="http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js"></script>
       <script type='text/javascript' src="http://angular-ui.github.io/ui-ace/build/ui-ace.js"></script>
       <script type='text/javascript' src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
     
@@ -46,7 +46,7 @@ p {
          <div class='alert alert-success'>
              <button class="close" data-dismiss="alert" href="#" aria-hidden="true">&times;</button>
          <p>This is an interactive playground to try <a href='http://rcharts.io'>rCharts</a> online. You can select different examples, play with the code, or even type in your own before hitting the submit button to render the chart.
-This application uses <a href='http://opencpu.org'>OpenCPU</a> to call R, AngularJS</a> for reactive bindings and the  the <a href='ace.c9.io'>Ace Editor</a> along with the <a href='http://angular-ui.github.io/ui-ace/'>Angular Ace module</a> for editing code<a href='http://angularjs.org'>.</p>
+This application uses <a href='http://opencpu.org'>OpenCPU</a> to call R, <a href='http://angularjs.org'>AngularJS</a> for reactive bindings and the  the <a href='ace.c9.io'>Ace Editor</a> along with the <a href='http://angular-ui.github.io/ui-ace/'>Angular Ace module</a> for editing code.</p>
          </div>
       </div>
     </div>
