modify link to gallery

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                  <li><a href="http://ramnathv.github.io/rCharts">
                    <i class="icon-leaf"> </i> Quick Start
                  </a></li>
-                 <li><a href="gallery.html">
+                 <li><a href="/gallery">
                    <i class="icon-signal"> </i> Gallery
                  </a></li>
                  <li class="dropdown">
