--- a/playground/index.html
+++ b/playground/index.html
@@ -8,7 +8,7 @@
       <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
       <script type='text/javascript' src="https://public.opencpu.org/js/archive/opencpu-0.4.js"></script>
       <script type='text/javascript' src="http://slidify.github.io/ile/libraries/widgets/interactive/js/ace/js/ace.js"></script>
-      <script type='text/javascript' src="http://angular-ui.github.io/ui-ace/build/ui-ace.js"></script>
+      <script type='text/javascript' src="http://angular-ui.github.io/ui-ace/dist/ui-ace.min.js"></script>
       <script type='text/javascript' src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
     
   
