use rCharts package on github

--- a/playground/index.html
+++ b/playground/index.html
@@ -79,7 +79,7 @@ This application uses <a href='http://opencpu.org'>OpenCPU</a> to call R, <a hre
 
 <script type='text/javascript'>//<![CDATA[ 
 
-ocpu.seturl("//public.opencpu.org/ocpu/github/rcharts/rCharts/R")
+ocpu.seturl("//ramnathv.ocpu.io/rCharts/R")
 
 var myApp = angular.module('myApp', ['ui.ace'])
 
